src/test/deca/syntax/invalid/lexer/include_tests/include_lex.deca
// Description:
//    test de programme avec includes
//    lexicalement correct
//
// Resultats:
//    Ligne 13 : Erreur de syntaxe.
//    test_lex ne doit pas donner d'erreur.
//
// Historique:
//    cree le 09/01/2023
//

#include"Math.decah"
#include  "Math.decah"
#include    "Math.decah"
#include    "test"
#include  "123...._--"